// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: 0;
  -ms-transform: 0;
  transform: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: 0;
  -ms-transform: 0;
  transform: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: 0;
  -ms-transform: 0;
  transform: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: 0;
  -ms-transform: 0;
  transform: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: hasnot;
  -ms-transform: hasnot;
  transform: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: has;
  -ms-transform: has;
  transform: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: hasnot;
  -ms-transform: hasnot;
  transform: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: has;
  -ms-transform: has;
  transform: has;
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: invalid.path.1;
  -ms-transform: invalid.path.1;
  transform: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: invalid.path.1;
  -ms-transform: invalid.path.1;
  transform: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: invalid.path.1;
  -ms-transform: invalid.path.1;
  transform: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: invalid.path.1;
  -ms-transform: invalid.path.1;
  transform: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: -54881;
  -ms-transform: -54881;
  transform: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: -54881;
  -ms-transform: -54881;
  transform: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: -42365;
  -ms-transform: -42365;
  transform: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: -42365;
  -ms-transform: -42365;
  transform: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: July;
    -ms-transform: July;
    transform: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: August;
    -ms-transform: August;
    transform: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: September;
    -ms-transform: September;
    transform: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: November;
    -ms-transform: November;
    transform: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: July;
    -ms-transform: July;
    transform: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: August;
    -ms-transform: August;
    transform: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: September;
    -ms-transform: September;
    transform: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: November;
    -ms-transform: November;
    transform: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: May;
    -ms-transform: May;
    transform: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: June;
    -ms-transform: June;
    transform: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: April;
    -ms-transform: April;
    transform: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: November;
    -ms-transform: November;
    transform: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: May;
    -ms-transform: May;
    transform: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: June;
    -ms-transform: June;
    transform: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: April;
    -ms-transform: April;
    transform: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: November;
    -ms-transform: November;
    transform: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: July;
    -ms-transform: July;
    transform: July;
  }
}

@media April {
  .c0 {
    -webkit-transform: August;
    -ms-transform: August;
    transform: August;
  }
}

@media January {
  .c0 {
    -webkit-transform: September;
    -ms-transform: September;
    transform: September;
  }
}

@media April {
  .c0 {
    -webkit-transform: November;
    -ms-transform: November;
    transform: November;
  }
}

@media June {
  .c0 {
    -webkit-transform: August;
    -ms-transform: August;
    transform: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: July;
    -ms-transform: July;
    transform: July;
  }
}

@media April {
  .c0 {
    -webkit-transform: August;
    -ms-transform: August;
    transform: August;
  }
}

@media January {
  .c0 {
    -webkit-transform: September;
    -ms-transform: September;
    transform: September;
  }
}

@media April {
  .c0 {
    -webkit-transform: November;
    -ms-transform: November;
    transform: November;
  }
}

@media June {
  .c0 {
    -webkit-transform: August;
    -ms-transform: August;
    transform: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: January;
    -ms-transform: January;
    transform: January;
  }
}

@media April {
  .c0 {
    -webkit-transform: December;
    -ms-transform: December;
    transform: December;
  }
}

@media January {
  .c0 {
    -webkit-transform: April;
    -ms-transform: April;
    transform: April;
  }
}

@media April {
  .c0 {
    -webkit-transform: May;
    -ms-transform: May;
    transform: May;
  }
}

@media June {
  .c0 {
    -webkit-transform: June;
    -ms-transform: June;
    transform: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: January;
    -ms-transform: January;
    transform: January;
  }
}

@media April {
  .c0 {
    -webkit-transform: December;
    -ms-transform: December;
    transform: December;
  }
}

@media January {
  .c0 {
    -webkit-transform: April;
    -ms-transform: April;
    transform: April;
  }
}

@media April {
  .c0 {
    -webkit-transform: May;
    -ms-transform: May;
    transform: May;
  }
}

@media June {
  .c0 {
    -webkit-transform: June;
    -ms-transform: June;
    transform: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: 54881;
  -ms-transform: 54881;
  transform: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: 54881;
  -ms-transform: 54881;
  transform: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: 42365;
  -ms-transform: 42365;
  transform: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: 42365;
  -ms-transform: 42365;
  transform: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: July;
  -ms-transform: July;
  transform: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: July;
  -ms-transform: July;
  transform: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: June;
  -ms-transform: June;
  transform: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: June;
  -ms-transform: June;
  transform: June;
}

<div
    className="c0"
  />,
]
`;

exports[`transform renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: DarkSlateBlue;
  -ms-transform: DarkSlateBlue;
  transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: DarkSlateBlue;
  -ms-transform: DarkSlateBlue;
  transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: DarkSlateBlue;
  -ms-transform: DarkSlateBlue;
  transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: DarkSlateBlue;
  -ms-transform: DarkSlateBlue;
  transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
